--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-РџСЂРѕРІРµСЂРєР° С‚РµРєСЃС‚Р°
+<HTML>
+  <HEAD>
+  <TITLE id=title>Чичерин Олег</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <link rel="shortcut icon" href="favicon.ico">
+  <LINK href="index_files/style.css" type=text/css rel=stylesheet>
+  <script src="script.js"></script>
+</HEAD>
+<BODY onLoad="initBody();">
+  <H1>Итак, главная страница</H1>
+<pre>
+  <div class="tty" id="tty1">
+   
+   На главной странице обычно пишут, зачем этот сайт и для чего.
+  
+Сначало конечно было имя. Вернее желание его зарезервировать. 
+Тут же попытался нарисовать что-нибудь в дизайнере Яндекса.       
+Сил хватило только на "Hello    
+                                 world" остался в планах на будущее.
+ 
+
+А потом пришло письмо от Яндекса, 
+     что на сайт уже три года никто не ходит, 
+      ничего не меняется 
+  пора его закрывать и освобожать место тем, кому это нужнее.
+  
+Задело за живое - пришлось обновляться. 
+ 
+В дизайнере рисовать было скучно и неинтересно. 
+Значит надо рисовать HTML самому. 
+ 
+Так в общем и родилась концепция сайта. 
+ 
+Страницы должны быть маленькие, 
+делаться в обычном текстовом редакторе, как это всегда и делалось.
+ 
+С другой стороны должено же быть хотя бы какое-нибудь подобие дизайна, 
+с одной стороны должна быть рамочка, с другой какие-нибудь часики.
+
+  
+Вот и делаю понемногу.
+             
+                                                 Иногда получается. :)
+ 
+ 
+</div>
+</pre>
+</BODY>
+</HTML>
